[gd_scene load_steps=6 format=3 uid="uid://cfwro8ripytuo"]

[ext_resource type="Script" path="res://EnemyHard.gd" id="1_50ya4"]
[ext_resource type="Texture2D" uid="uid://c8n1ptdnnucmf" path="res://art/enemy_sprite_2.png" id="1_wdp17"]
[ext_resource type="AudioStream" uid="uid://qslptg2pr471" path="res://audio/enemy_defeat.mp3" id="2_cn7qb"]
[ext_resource type="Texture2D" uid="uid://c4umcnfyciq4l" path="res://art/purple_particle.png" id="3_j53id"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y32y6"]
size = Vector2(38, 42)

[node name="EnemyHard" type="Area2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_50ya4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_y32y6")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_wdp17")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-9.53674e-07, 4.76837e-07)
scale = Vector2(1.9, 2.1)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ChangeDirectionTimer" type="Timer" parent="."]
autostart = true

[node name="DefeatParticleEffect" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 0.3
lifetime_randomness = 0.2
texture = ExtResource("3_j53id")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 33.0
initial_velocity_max = 80.0
scale_amount_min = 0.25
scale_amount_max = 0.25

[node name="DefeatSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_cn7qb")
pitch_scale = 1.3

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_change_direction_timer_timeout"]
